--- a/css/LTserve.css
+++ b/css/LTserve.css
@@ -4,7 +4,7 @@
     border-radius: 20px;
     position: absolute;
     width: 73.2%;
-    height: 82.7%;
+    height: 496px;
     position: absolute;
     top: 11.6%;
     left: 15%;
@@ -24,10 +24,11 @@ body {
     width: 100%;
     height: 600px;
     overflow: hidden;
+    min-width: 1536px;;
 }
 .LTground .LTpre1{
     width: 100%;
-    height: 17%;
+    height: 84px;
     background: #000;
 }
 .LTground .LTpre1 .img2{
@@ -37,7 +38,7 @@ body {
 }
 .LTground .LTbre1{
     background: pink;
-    height: 83%;
+    height: 412px;
 }
 .LTground .LTbre1 .LTleft_1{
     width: 70%;
@@ -67,6 +68,9 @@ body {
     width: 19px;
     margin-left: 8px;
 }
+.LTbre1 .LTleft_1 .LThorn{
+    margin-bottom: 25px;
+}
 .LTbre1 .LTleft_1 .LThorn a{
     display: inline-block;
     margin-left: 176px;
@@ -75,8 +79,7 @@ body {
     width: 10px;
 }
 .LTbre1 .LTleft_1 .LTtwo{
-    /* height: 25px; */
-    margin-top: 25px;
+    /* margin-top: 25px; */
     text-align: center;
 }
 .LTbre1 .LTleft_1 .LTtwo p{
@@ -164,14 +167,18 @@ body {
     float: right;
     width: 30%;
 }
-/* .LTbre1 .LTright_1 .LTmobile{
-    background: red;
-}  */
+.LTbre1 .LTright_1 .LTmobile{
+    width: 100%;
+    height: 169px;
+    overflow: hidden;
+    position: relative;
+} 
 .LTbre1 .LTright_1 .LTmobile .LTmo{
     width: 142%;
     display: flex;
-    /* justify-content: space-around; */
-    margin-top: 8px;
+    position: absolute;
+    top: 7px;
+    left: -2px;
 }
 .LTbre1 .LTright_1 .LTmo>li{
     float: left; 
@@ -198,12 +205,15 @@ body {
     display: inline-block;
 }
 .LTkuai3{
-    background: rgba(206, 92, 39, 0.8);
+    background: rgba(206, 92, 39, 0.8) !important; 
 }
 .LTbre1 .LTright_1 .LTmobile .LTmc{
     display: flex;
     justify-content: center;
-    margin-top: 11px;
+    height: 17px;
+    position: absolute;
+    top: 91%;
+    left: 39%;
 }
 .LTbre1 .LTright_1 .LTtab{
     display: flex;
