--- a/css/LTserve.css
+++ b/css/LTserve.css
@@ -81,6 +81,7 @@ body {
 .LTbre1 .LTleft_1 .LTtwo{
     /* margin-top: 25px; */
     text-align: center;
+    position: relative;
 }
 .LTbre1 .LTleft_1 .LTtwo p{
     display: inline;
@@ -89,13 +90,16 @@ body {
 .LTbre1 .LTleft_1 .LTtwo .laba2{
     width: 25px;
     float: right;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 0;
 }
 .LTbre1 .LTleft_1 .LTtwo .laba2_1{
     display: none;
     position: absolute;
-    top: 141px;
+    top: 0;
     left: 761px;
     color: white;
     font-size: 20px;
@@ -153,7 +157,7 @@ body {
     border: 1px solid #333;
     text-align: center;
     border-radius: 3px;
-    margin-left: 420px;
+    margin-left: 548px;
 }
 .LTbre1 .LTask .LTend .LTbtn2{
     background: rgba(126,191,209,.8);
