--- a/css/xkmember.css
+++ b/css/xkmember.css
@@ -3,65 +3,164 @@
     font-size: 13px;
     padding: 55px 0;
 }
+
 .content {
     margin: 0 auto;
     width: 990px;
     overflow: hidden;
 }
+
 .member_left {
     float: left;
     width: 25%;
 }
+
 .member_left h3 {
     font-size: 25px;
     font-weight: 500;
     padding-bottom: 10px;
     border-bottom: 1px dotted #333;
 }
+
 .member_left li {
     font-size: 13px;
 }
+
 .item {
+    position: relative;
     border-bottom: 1px dotted #333;
-    padding: 15px;
+    padding: 15px 0 0;
 }
-.i23 {
+
+.item a {
+    display: block;
+    padding-bottom: 15px;
+}
+
+.i23 ul {
     display: none;
+    font-size: 13px;
+    margin-left: 27px;
 }
-.itme:after {
+
+.i23 a {
+    color: grey;
+}
+
+.i23 a:hover {
+    color: #333;
+}
+
+.yiyi {
+    list-style: disc;
+}
+
+.yiyi a {
+    color: #dc1e23 !important;
+}
+
+.i23 li:hover {
+    list-style: disc;
+}
+
+.item:after {
     content: "+";
     position: absolute;
     right: 0;
     top: 15px;
 }
+
 .member_right {
     float: left;
-    padding: 0 15px;
+    
     width: 710px;
+    border: 1px solid #ccc;
+    margin: 0 15px;
 }
+
 .title h1 {
     background-color: gray;
     color: #fff;
     font-size: 20px;
     padding: 12px 22px;
 }
+
 .title-1 {
     background-color: #fff;
     padding: 13px 22px;
     line-height: 24px;
 }
+
 .title-1 td {
     border: 1px solid #ccc;
     padding: 10px 44px 10px 10px;
 }
+
 .title-1 span {
     font-weight: 700;
 }
+
 .p1 {
     font-weight: 700;
     color: red;
 }
-.p2 li{
+
+.p2 li {
     list-style: disc;
     margin: 0 0 7px 19px;
+}
+
+/* xkrecruit.html的css */
+.item1 {
+    position: relative;
+    border-bottom: 1px dotted #333;
+    padding: 15px 0;
+}
+.purchase {
+    padding: 20px;
+    background-color: #fff;
+}
+.purchase_h4 {
+    font-size: 17px;
+    font-weight: 700;
+    margin: 7px 0;
+    padding: 0 25px;
+    display: flex;
+    justify-content: space-between;
+}
+.what a {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 14px;
+    line-height: 40px;
+    padding: 0 20px 0 0;
+    margin: 16px 0 0;
+    border-bottom: 1px solid #ccc;
+    color: grey;
+}
+.what a span {
+    color: grey;
+}
+.what a:hover {
+    color: black;
+}
+.what a span:hover {
+    color: black;
+}
+.page {
+    margin: 70px 0 0;
+    text-align: center;
+}
+.page a {
+    font-size: 18px;
+    margin: 0 4px;
+}
+.page a:first-child {
+    color: #dc1e23;
+    border-bottom: 2px solid #dc1e23;
+}
+.page a:hover {
+    color: #dc1e23;
+    border-bottom: 2px solid #dc1e23;
 }
