--- a/css/xkprogress.css
+++ b/css/xkprogress.css
@@ -34,6 +34,8 @@
 .tab_container {
         width: 1280px;
         margin: 90px auto 75px;
+        position: relative;
+        box-sizing: border-box;
     }
 .tab_container_1 {
         font-size: 36px;
@@ -208,4 +210,20 @@
 .a_6 {
     color: #dc1e23 !important;
     border-bottom: 2px solid #dc1e23;
+}
+
+/* 返回顶部 */
+.tip {
+    /* display: none; */
+    position: fixed;
+    width: 48px;
+    height: 48px;
+    background: url(../images/to-top-red.png) no-repeat;
+    bottom: 0;
+    right: 110px;
+    cursor: pointer;
+    z-index: 99;
+}
+.tip:hover {
+    background: url(../images/to-top-black.png) no-repeat;
 }
