LXW提交最后一次

--- a/css/lxw_idea.css
+++ b/css/lxw_idea.css
@@ -83,7 +83,7 @@
 }
 
 .d_idea {
-    width: 50%;
+    width: 950px;
     background-color: #fff;
     margin: 0 auto;
     transform: translateY(10%);
