--- a/css/dlindex.css
+++ b/css/dlindex.css
@@ -180,6 +180,7 @@
 .content .content_nav {
     background-color: #DC1E32;
     padding: 0 100px;
+    position: relative;
 }
 .content .content_nav ul{
     display: flex;
@@ -198,12 +199,12 @@
     position: absolute;
     z-index: 222;
     bottom: 98px;
-    left: -23%;
+    left: 100px;
     width: 385px;
     background-color: #ffffff;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    padding: 0 20px 0 0px;
+    padding: 20px;
     box-sizing: border-box;
 }
 .content .bill_number .bill_search {
@@ -233,7 +234,7 @@
 .content .bill_number .search_bill_number {
     line-height: 30px;
     width: 325px;
-    /* margin-top: 10px; */
+    margin-top: 15px;
     padding: 5px 20px;
     background-color: #DC1E32;
     color: #ffffff;
